# project_dog

adog_legged_control/: .gitmodules  README.md
adog_legged_control/adog_description/: CMakeLists.txt  README.md  package.xml
adog_legged_control/adog_description/config/: joint_trajectory_publisher.yaml  robot_control_gazebo copy.yaml  robot_control_gazebo.yaml
adog_legged_control/adog_description/config/ocs2/: task.info
adog_legged_control/adog_description/launch/: gazebo.launch.py  test_joint_trajectory_controller.launch.py  visualize.launch.py
adog_legged_control/adog_description/meshes/: base_link.STL  foot.STL  link1.STL  link2.STL  link3.STL  wheel_Link.STL
adog_legged_control/adog_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  ros2_control.xacro
adog_legged_control/adog_legged_controller/: CMakeLists.txt  README.md  adog_legged_controller.xml  package.xml
adog_legged_control/adog_legged_controller/include/adog_legged_controller/: adog_legged_controller.hpp  apid_cfg.h  validate_adog_legged_controller_parameters.hpp  visibility_control.h
adog_legged_control/adog_legged_controller/src/: adog_legged_controller.cpp  adog_legged_controller.yaml  apid.c  apid_auto_tune_ZNmode.c  apid_ex_fuzzy.c  apid_exfunc.c
adog_legged_control/adog_legged_controller/test/: adog_legged_controller_params.yaml  adog_legged_controller_preceeding_params.yaml  test_adog_legged_controller.cpp  test_adog_legged_controller.hpp  test_adog_legged_controller_preceeding.cpp  test_load_adog_legged_controller.cpp
adog_legged_control/adog_legged_hardware_interface/: CMakeLists.txt  README.md  adog_legged_hardware_interface.xml  package.xml
adog_legged_control/adog_legged_hardware_interface/include/adog_legged_hardware_interface/: adog_legged_hardware.hpp  serialib.h  usb_hardware.hpp  visibility_control.h
adog_legged_control/adog_legged_hardware_interface/src/: adog_legged_hardware.cpp  serialib.cpp  usb_hardware.cpp
adog_legged_control/adog_legged_hardware_interface/test/: test_adog_legged_hardware.cpp
adog_legged_control/adog_legged_interfaces/: CMakeLists.txt  README.md  package.xml
adog_legged_control/adog_legged_interfaces/msg/: JointMit.msg  MultiJointMit.msg
adog_legged_control/legacy/adog_legged_controller_gazebo_test/: CMakeLists.txt  package.xml
adog_legged_control/legacy/adog_legged_controller_gazebo_test/src/: main.cpp
adog_legged_control/legacy/adog_legged_controller_test/: CMakeLists.txt  package.xml
adog_legged_control/legacy/adog_legged_controller_test/src/: main.cpp
adog_legged_control/legacy/adog_legged_controller_test1/: CMakeLists.txt  package.xml  需求.md
adog_legged_control/legacy/adog_legged_controller_test1/include/adog_legged_controller_test/: leg_software.hpp
adog_legged_control/legacy/adog_legged_controller_test1/src/: leg_software.cpp  main.cpp
adog_legged_control/legacy/adog_legged_estimate/: CMakeLists.txt  package.xml
adog_legged_control/legacy/adog_legged_estimate/include/adog_legged_estimate/: adog_legged_estimate.hpp
adog_legged_control/legacy/adog_legged_estimate/src/: main.cpp
adog_legged_control/legacy/unitree_go2_description/: CMakeLists.txt  package.xml
adog_legged_control/legacy/unitree_go2_description/config/: gazebo.rviz  joint_trajectory_publisher copy.yaml  robot_control.yaml  robot_control_gazebo.yaml
adog_legged_control/legacy/unitree_go2_description/config/ocs2/: task.info
adog_legged_control/legacy/unitree_go2_description/launch/: gazebo.launch copy.py  gazebo.launch.py  hw.launch copy.py  hw.launch.py  unitree_guide.launch.py  visualize.launch.py
adog_legged_control/legacy/unitree_go2_description/world/: empty_world.world  wall.world
adog_legged_control/legacy/unitree_go2_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro  ros2_control copy.xacro  ros2_control.xacro
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/: package.xml  文件理解.md
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/: Ocs2QuadrupedController.cpp  Ocs2QuadrupedController.h
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/control/: TargetManager.cpp
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/estimator/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/interface/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/interface/initialization/: LeggedRobotInitializer.cpp
adog_legged_control/quadruped_ros2_control/controllers/ocs2_quadruped_controller/src/wbc/: HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
adog_legged_control/quadruped_ros2_control/controllers/rl_quadruped_controller/src/: RlQuadrupedController.cpp
adog_legged_control/quadruped_ros2_control/descriptions/unitree/go2_description/config/ocs2/: task.info
adog_legged_control/quadruped_ros2_control/descriptions/unitree/go2_description/xacro/: 笔记.md
adog_legged_control/script/: control_commend_keyboard.sh  gazebo_start.sh  mujoco_unitree_start.sh  quadruped_control_mujoco_start.sh  unitree_guide_controller_start.sh
